Html and CSS file called in main

--- a/frontEnd/Slide_6_Home/slide6.html
+++ b/frontEnd/Slide_6_Home/slide6.html
@@ -1,13 +1,17 @@
 <html>
   <head>
+    <!--link rel="stylesheet" href="frontEnd/test.css"-->
+    <link rel="stylesheet" href="frontEnd/Slide_6_Home/slide6.css">
     <title>Raider Time Home</title>
     <link href='https://fonts.googleapis.com/css?family=Graduate' rel='stylesheet'>
+    
+    
 <style>
 body {
     font-family: 'Graduate';font-size: 22px;
     background-color: #eeeeee;
 }
-</style>
+  </style>
   </head>
   
   <body>
