--- a/frontEnd/slide 6: home/slide_6.html
+++ b/frontEnd/slide 6: home/slide_6.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <!--link rel="stylesheet" href="frontEnd/test.css"-->
-    <link rel="stylesheet" href="frontEnd/slide%206:%20Home/slide_6.css">
+    <link rel="stylesheet" href="frontEnd/slide%206:%20home/slide_6.css">
     <title>Raider Time Home</title>
     <link href='https://fonts.googleapis.com/css?family=Graduate' rel='stylesheet'>
     
