--- a/slide_1.html
+++ b/slide_1.html
@@ -9,6 +9,7 @@ body {
     font-family: 'Graduate';font-size: 22px;
     background-image: url('https://github.com/atholtonawol/raidertime-22/blob/main/assets/image/bw%20atholton%20building%20img.jpg?raw=true');
     background-size: cover;
+    background-repeat: no-repeat
 }
 </style>
   </head> 
