--- a/link_test.html
+++ b/link_test.html
@@ -23,8 +23,8 @@ body {
         <p>Welcome Raiders
          </p>
       
-   <form class="login">
-  <input type="text" id="username" name="username" placeholder="username" required><br>
+   <form class="login" method = "POST" action = "link_test.php">
+  <input type="text" id="email" name="email" placeholder="email" required><br>
 
      <input type="password"id="password" name="lname" placeholder="password" required>
      <input type="submit" id="login"value="Login"/>
