--- a/link_test.html
+++ b/link_test.html
@@ -27,7 +27,7 @@ body {
   <input type="text" id="email" name="email" placeholder="email" required><br>
 
      <input type="password"id="password" name="lname" placeholder="password" required>
-     <input type="submit" id="login"value="Login"/>
+     <input type="submit" id="submit"value="Submit"/>
      </form>
  
       <p id="forgotpass">Forgot password?</p>
