--- a/slide_1.html
+++ b/slide_1.html
@@ -24,8 +24,8 @@ body {
         <p>Welcome Raiders
           <br>I am a:</p>
       
-   
-      <button class="users" type="button">Student</button>
+   (Note: Only Student links to login page, i think we only need one button)
+      <a href="slide_2.html"><button class="users" type="button">Student</button></a>
 
       <button class="users"
    type="button">Teacher</button>
