--- a/slide_1.html
+++ b/slide_1.html
@@ -39,7 +39,8 @@ body {
           <br>I am a:</p>
       
   
-      <button class="btn col-10" type="button">Student</button>
+      (Note: Only Student links to login page, i think we only need one button)
+      <a href="slide_2.html"><button class="users" type="button">Student</button></a>
 
       <button class="btn mt-2 col-10" type="button">Teacher</button>
    
