--- a/link_test.html
+++ b/link_test.html
@@ -23,7 +23,7 @@ body {
         <p>Welcome Raiders
          </p>
       
-   <form method = "POST" action = "link_test.php">
+   <form method = "POST">
   <input type="text" id="email" name="email" placeholder="email" required><br>
 
      <input type="password"id="password" name="lname" placeholder="password" required>
@@ -36,5 +36,21 @@ body {
         Don't have an account? <u>Sign up</u>
       </div>
   </body>
+  <?php
+if(isset($_POST[‘submit’])){
+	echo "this worked i think";
+	$email = $_POST[‘email’];
+	$pass = $_POST[‘password’];
+}
+
+require '/home4/ahsraid1/public_html/database/connect.php';
+if (!$conn) {
+  die("Connection failed: " . mysqli_connect_error());
+ }
+ echo "Connected successfully";  
+//$sql = “UPDATE emails SET testing = $pass WHERE email = $email”;
+$sql = "INSERT INTO emails (email, testing) values ($email, $pass);
+$update = mysqli_query($conn, $sql);
+?>
 
 </html>
