--- a/slide_5.html
+++ b/slide_5.html
@@ -4,6 +4,7 @@
     <title>Home Page
     </title>
     <link href='https://fonts.googleapis.com/css?family=Graduate' rel='stylesheet'>
+    <link href='slide_5.css' rel='stylesheet'>
 <style>
 body {
     font-family: 'Graduate';font-size: 22px;
