--- a/slide_6.html
+++ b/slide_6.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="slide_6.css">
     <title>Raider Time Home</title>
     <link href='https://fonts.googleapis.com/css?family=Graduate' rel='stylesheet'>
+    <link href='slide_6.css' rel='stylesheet'>
     
     
 <style>
