--- a/slide_9.html
+++ b/slide_9.html
@@ -3,6 +3,7 @@
 <head>
 <title>HTML, CSS and JavaScript demo</title>
   <link href='https://fonts.googleapis.com/css?family=Graduate' rel='stylesheet'>
+  <link href='slide_9.css' rel='stylesheet'>
 <style>
 body {
     font-family: 'Graduate';font-size: 22px;
