--- a/slide_2.html
+++ b/slide_2.html
@@ -30,7 +30,7 @@ body {
      <input type="submit" id="login"value="Login"/>
      </form>
  
-      <p id="forgotpass">Forgot password?</p>
+      <p id="forgotpass"><a href="slide_3">Forgot password?</a></p>
       </div>
       <div class="createaccount">
         Don't have an account? <u>Sign up</u>
