--- a/slide_3.html
+++ b/slide_3.html
@@ -22,7 +22,7 @@ body {
        <form action="" method="get">
           <input type="text" placeholder="email"/>
         </form>
-        <button class="users" type="button">Submit</button>
+      <a href="slide_4.html"><button class="users" type="button">Submit</button></a>
      </div>
 
      
