--- a/slide_4.html
+++ b/slide_4.html
@@ -22,7 +22,7 @@ body {
        <form action="" method="get">
           <input type="text" placeholder="VERIFICATION CODE" style="text-align: center"/>
         </form>
-      <button class="users" type="button"><b>SUBMIT</b></button>
+      <a href="slide_5.html"><button class="users" type="button"><b>SUBMIT</b></button></a>
      </div>
 
      
