--- a/slide_5.html
+++ b/slide_5.html
@@ -28,7 +28,7 @@ body {
        <form action="" method="get">
           <input type="text" placeholder="Confirm new Password" style="text-align: center" class="password1"/>
         </form>
-      <button class="users" type="button"><b>Change</b></button>
+      <a href="slide_2.html"><button class="users" type="button"><b>Change</b></button></a>
      </div>
 
      
