--- a/slide_9.html
+++ b/slide_9.html
@@ -1,113 +1,92 @@
-<!DOCUTYPE html>
-<html>
+<!doctype html>
+<html lang = "en">
 <head>
-<title>HTML, CSS and JavaScript demo</title>
-  <link href='https://fonts.googleapis.com/css?family=Graduate' rel='stylesheet'>
-  <link href='slide_9.css' rel='stylesheet'>
+ <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+
+ <!--Bootsrap CSS-->
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"></head>
+ <link rel = "stylesheet" href = "slide_9.css">
+
+ <title>FAQs</title>
+ <link href='https://fonts.googleapis.com/css?family=Graduate' rel='stylesheet'>
 <style>
 body {
     font-family: 'Graduate';font-size: 22px;
     background-color: #eeeeee;
 }
 </style>
- <meta charset="utf-8">
- <meta name="viewport" content="width=device-width, initial-scale=1">
- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js">
- function myFunction() {
-  document.getElementById("myDropdown1").classList.toggle("show");
-  document.getElementById("myDropdown2").classList.toggle("show");
-  document.getElementById("myDropdown3").classList.toggle("show");
-  document.getElementById("myDropdown4").classList.toggle("show");
-}
-
-window.onclick = function(event) {
-  if (!event.target.matches('.dropbtn1')) {
-    var dropdowns = document.getElementsByClassName("dropdown-content1");
-    var i;
-    for (i = 0; i < dropdowns.length; i++) {
-      var openDropdown = dropdowns[i];
-      if (openDropdown.classList.contains('show')) {
-        openDropdown.classList.remove('show');
-      }
-    }
-  }
-  if (!event.target.matches('.dropbtn2')) {
-    var dropdowns = document.getElementsByClassName("dropdown-content2");
-    var i;
-    for (i = 0; i < dropdowns.length; i++) {
-      var openDropdown = dropdowns[i];
-      if (openDropdown.classList.contains('show')) {
-        openDropdown.classList.remove('show');
-      }
-    }
-  }
-  if (!event.target.matches('.dropbtn3')) {
-    var dropdowns = document.getElementsByClassName("dropdown-content3");
-    var i;
-    for (i = 0; i < dropdowns.length; i++) {
-      var openDropdown = dropdowns[i];
-      if (openDropdown.classList.contains('show')) {
-        openDropdown.classList.remove('show');
-      }
-    }
-  }
-  if (!event.target.matches('.dropbtn4')) {
-    var dropdowns = document.getElementsByClassName("dropdown-content4");
-    var i;
-    for (i = 0; i < dropdowns.length; i++) {
-      var openDropdown = dropdowns[i];
-      if (openDropdown.classList.contains('show')) {
-        openDropdown.classList.remove('show');
-      }
-    }
-  }
-}
-  </script>
 
 </head>
+
 <body>
-<!-- Start your code here -->
- <div class = "container">
-  <div class = "row h-100">
-  <div class = "col-12 mx-auto">
-    <div class = "faq">
-    <p class = "h3">Frequently Asked Questions</p>
-    <div class="dropdown1">
-      <button onclick="myFunction()" class="dropbtn1">Question 1: Why is signing up neccessary?</button>
-      <div id="myDropdown1" class="dropdown-content1">
-         <p>Signing up for your desired classroom in advance helps prevent overcrowding and helps organize our weekly Raider Time.</p>
-      </div>
-      </div>
-    <div class="dropdown2">
-      <button onclick="myFunction()" class="dropbtn2">Question 2: How do I sign up for a club meeting?
-      </button>
-      <div id="myDropdown2" class="dropdown-content2">
-         <p>To sign up for a club meeting you need to sign up for the teacher's classroom who sponsors the club. If you are unsure, as your club sponsor where you will be meeting! 
-</p>
-      </div>
-      </div>
-    
-      <div class="dropdown3">
-      <button onclick="myFunction()" class="dropbtn3">Question 3: Why can't I find the classroom I want?
-      </button>
-      <div id="myDropdown3" class="dropdown-content3">
-         <p> Any teacher who is not available for the Raider Time will not show up on the dropdown list. If you think we are missing a teacher, please let us know by emailing us at atholtonADS@gmail.com. </p>
-      </div>
-      </div>
-      
-   <div class="dropdown4">
-     <button onclick="myFunction()" class="dropbtn4">Question 4: I'm having trouble using the website!
-</button>
-      <div id="myDropdown4" class="dropdown-content4">
-         <p> If you have a question not answered on this page or are experiencing a bug with our website, please contact us at atholtonADS@gmail.com.
- </p>
-      </div>
-      </div>
+<div class = "container">
+    <div class = "row">
+        <div class = "col-12 mx-auto">
+        <div class = "faq">
+            <p class = "h3">Frequently Asked Questions</p>
+
+            <div class="accordion" id="accordionOne">
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        Question 1: Why is signing up neccessary?
+                    </button>
+                  </h2>
+                  <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        Signing up for your desired classroom in advance helps prevent overcrowding and helps organize our weekly Raider Time.
+                    </div>
+                  </div>
+                </div>
+
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        Question 2: How do I sign up for a club meeting?
+                    </button>
+                  </h2>
+                  <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        To sign up for a club meeting you need to sign up for the teacher's classroom who sponsors the club. If you are unsure, as your club sponsor where you will be meeting! 
+                    </div>
+                  </div>
+                </div>
+
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        Question 3: Why can't I find the classroom I want?
+                    </button>
+                  </h2>
+                  <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        Any teacher who is not available for the Raider Time will not show up on the dropdown list. If you think we are missing a teacher, please let us know by emailing us at atholtonADS@gmail.com.
+                    </div>
+                  </div>
+                </div>
+
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingFour">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                        Question 4: I'm having trouble using the website!
+                      </button>
+                    </h2>
+                    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        If you have a question not answered on this page or are experiencing a bug with our website, please contact us at atholtonADS@gmail.com.
+                      </div>
+                    </div>
+                  </div>
+              </div>
+
+        </div>
     </div>
    </div>
-   </div>
+  </div>
 </div>
-<!-- End your code here -->
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </body>
 </html>
