--- a/slide_9.html
+++ b/slide_9.html
@@ -26,7 +26,8 @@ body {
         <div class = "faq">
             <p class = "h3">Frequently Asked Questions</p>
 
-            <div class="accordion" id="accordionOne">
+            <div class="accordion accordian-flush" id="accordionOne">
+             
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="headingOne">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
