--- a/slide_2.html
+++ b/slide_2.html
@@ -27,7 +27,7 @@ body {
   <input type="text" id="username" name="username" placeholder="username" required><br>
 
      <input type="password"id="password" name="lname" placeholder="password" required>
-     <a href="slide_6.html"><input type="submit" id="login"value="Login"/></a>
+     <input type="submit" id="login"value="Login"/>
      </form>
  
       <p id="forgotpass"><a href="slide_3.html">Forgot password?</a></p>
@@ -35,6 +35,7 @@ body {
       <div class="createaccount">
         Don't have an account? <u>Sign up</u>
       </div>
+      <a href="slide_6.html">temp login button</a>
   </body>
 
 </html>
