Update and rename ahs_logo_in_corner to menu_bar.html

--- a/menu_bar.html
+++ b/menu_bar.html
@@ -10,11 +10,20 @@
     <rect width=“300”, height=“100”, x=“20”, y=“20”, fill=“green” />
     <p style="background-color: green;">Welcome Raiders
         <br>
+        
+        <!---
         I am a:
 
         <button type="button">Student</button>
         <button type="button">Teacher</button>
         <button type="button">Administrator</button>
+        -->
+        
+        <a href="slide_6.html"><button type="button">Home</button></a>
+        <a href="slide_9.html"><button type="button">FAQ</button></a>
+        <a href="slide_10.html"><button type="button">Announcements</button></a>
+        <a href="slide_11.html"><button type="button">Settings</button></a>
+        <a href="slide_8.html"><button type="button">About Us</button></a>
     </p>
       <style>
 #content {
