--- a/slide_6.html
+++ b/slide_6.html
@@ -21,7 +21,8 @@ body {
     </header>
     
     <?php
-      require "menu_bar.html"
+echo test;
+      require "menu_bar.html";
     ?>
     
     <!--
