--- a/slide_6.html
+++ b/slide_6.html
@@ -43,7 +43,8 @@ echo test;
   </div>
   
   <div class = "changepass">
-    <a href = "#changepass">Change Sign-Up</a>
+    <!-- <a href = "#changepass">Change Sign-Up</a> -->
+    <a href = "slide_7.html">Change Sign-Up</a>
   </div>
     
     <footer>
