--- a/menu_bar.html
+++ b/menu_bar.html
@@ -1,42 +1,9 @@
-<DOCTYPE html>
-    <html>
-
-<!-- IGNORE THIS CODE, YOU CAN DELETE IT IF YOU WANT -->
-
-    <head>
-        <title>Home Page
-        </title>
-    </head>
-    <rect width=“300”, height=“100”, x=“20”, y=“20”, fill=“green” />
-    <p style="background-color: green;">Welcome Raiders
-        <br>
-        
-        <!---
-        I am a:
-
-        <button type="button">Student</button>
-        <button type="button">Teacher</button>
-        <button type="button">Administrator</button>
-        -->
-        
+<html>
+    <body>
         <a href="slide_6.html"><button type="button">Home</button></a>
         <a href="slide_9.html"><button type="button">FAQ</button></a>
         <a href="slide_10.html"><button type="button">Announcements</button></a>
         <a href="slide_11.html"><button type="button">Settings</button></a>
         <a href="slide_8.html"><button type="button">About Us</button></a>
-    </p>
-      <style>
-#content {
-        position: relative;
-    }
-    #content img {
-        position: absolute;
-        top: -60px;
-        right: 0px;
-      </style>
-      <div id="content">
-        <a href="https://ahs.hcpss.org/" target="_blank">
-          <img     src="https://raw.githubusercontent.com/atholtonawol/raidertime-22/main/assets/image/atholtonA.png" alt="Atholton Logo" style="width:50px;height:60px;">
-        </a>
-  </div>
-    </html>
+    </body>
+</html>
