--- a/menu_bar.html
+++ b/menu_bar.html
@@ -5,5 +5,6 @@
         <a href="slide_10.html"><button type="button">Announcements</button></a>
         <a href="slide_11.html"><button type="button">Settings</button></a>
         <a href="slide_8.html"><button type="button">About Us</button></a>
+        This is menu_bar.html! Use the php code <code>require "menu_bar.php"</code> at the top of every page to embed this
     </body>
 </html>
