--- a/menu_bar.html
+++ b/menu_bar.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <a href="slide_6.html"><button type="button">Home</button></a>
+        <a href="slide_6.html"><button type="button">Hoedme</button></a>
         <a href="slide_9.html"><button type="button">FAQ</button></a>
         <a href="slide_10.html"><button type="button">Announcements</button></a>
         <a href="slide_11.html"><button type="button">Settings</button></a>
