--- a/slide_9.html
+++ b/slide_9.html
@@ -20,6 +20,9 @@ body {
 </head>
 
 <body>
+  <?php
+      require("menu_bar.html");
+    ?>
 <div class = "container">
     <div class = "row">
         <div class = "col-12 mx-auto">
