--- a/slide_9.html
+++ b/slide_9.html
@@ -21,7 +21,7 @@ body {
 
 <body>
   <?php
-      require("menu_bar.html");
+      require("menu_bar.php");
     ?>
 <div class = "container">
     <div class = "row">
