--- a/slide_9.html
+++ b/slide_9.html
@@ -21,8 +21,8 @@ body {
 
 <body>
   <?php
-      require("menu_bar.php");
-    ?>
+      require(require('menu_bar.html');
+  ?>
 <div class = "container">
     <div class = "row">
         <div class = "col-12 mx-auto">
