--- a/menu_bar.html
+++ b/menu_bar.html
@@ -1,10 +1,10 @@
 <html>
     <body>
-        <a href="slide_6.html"><button type="button">Hoedme</button></a>
+        <a href="slide_6.html"><button type="button">Home</button></a>
         <a href="slide_9.html"><button type="button">FAQ</button></a>
         <a href="slide_10.html"><button type="button">Announcements</button></a>
         <a href="slide_11.html"><button type="button">Settings</button></a>
-        <a href="slide_8.html"><button type="button">About Us</button></a>
-        This is menu_bar.html! Use the php code <code>require "menu_bar.php"</code> at the top of every page to embed this
+        <a href="slide_8.html"><button type="button">About Us!</button></a>
+        menu test
     </body>
 </html>
