--- a/slide_2.html
+++ b/slide_2.html
@@ -35,7 +35,7 @@ body {
       <div class="createaccount">
         Don't have an account? <u>Sign up</u>
       </div>
-      <a href="slide_6.html">temp login button</a>
+      <a href="slide_6.php">temp login button</a>
   </body>
 
 </html>
