--- a/link_test.html
+++ b/link_test.html
@@ -23,7 +23,7 @@ body {
         <p>Welcome Raiders
          </p>
       
-   <form method = "POST">
+   <form class = "login" method = "post" action= "/link_test.html">
   <input type="text" id="email" name="email" placeholder="email" required><br>
 
      <input type="password"id="password" name="lname" placeholder="password" required>
