--- a/menu_bar.html
+++ b/menu_bar.html
@@ -2,9 +2,9 @@
     <body>
         <a href="slide_6.php"><button type="button">Home</button></a>
         <a href="slide_9.php"><button type="button">FAQ</button></a>
-        <a href="slide_10.html"><button type="button">Announcements</button></a>
-        <a href="slide_11.html"><button type="button">Settings</button></a>
-        <a href="slide_8.html"><button type="button">About Us!</button></a>
+        <a href="slide_10.php"><button type="button">Announcements</button></a>
+        <a href="slide_11.php"><button type="button">Settings</button></a>
+        <a href="slide_8.php"><button type="button">About Us!</button></a>
         menu test
     </body>
 </html>
