--- a/link_test.html
+++ b/link_test.html
@@ -23,7 +23,7 @@ body {
         <p>Welcome Raiders
          </p>
       
-   <form class = "login" method = "post" action= "/link_test.html">
+   <form class = "login" method = "POST" action = "link_test.php>
   <input type="text" id="email" name="email" placeholder="email" required><br>
 
      <input type="password"id="password" name="lname" placeholder="password" required>
@@ -36,5 +36,8 @@ body {
         Don't have an account? <u>Sign up</u>
       </div>
   </body>
+  <?php
+  
+  ?>
 
 </html>
