--- a/menu_bar.html
+++ b/menu_bar.html
@@ -1,10 +1,17 @@
 <html>
     <body>
-        <img src="assets/image/atholtonA.png" width="40" height="40">
-        <a href="slide_6.php"><button type="button">Home</button></a>
-        <a href="slide_9.php"><button type="button">FAQ</button></a>
-        <a href="slide_10.php"><button type="button">Announcements</button></a>
-        <a href="slide_11.php"><button type="button">Settings</button></a>
-        <a href="slide_8.php"><button type="button">About Us!</button></a>
+        <p style="text-align:left;">
+            <img src="assets/image/atholtonA.png" width="40" height="40">
+            <a href="slide_6.php"><button type="button">Home</button></a>
+            <a href="slide_9.php"><button type="button">FAQ</button></a>
+            <a href="slide_10.php"><button type="button">Announcements</button></a>
+            <a href="slide_11.php"><button type="button">Settings</button></a>
+            <a href="slide_8.php"><button type="button">About Us!</button></a>
+    
+            <span style="float:right;">
+                <a href="slide_2.php"><button type="button">Log in/Sign up</button></a>
+            </span>
+        </p>
+        
     </body>
 </html>
