--- a/menu_bar.html
+++ b/menu_bar.html
@@ -1,5 +1,10 @@
 <html>
+    <head>
+         <link href='menu_bar.css' rel='stylesheet'>
+    </head>
+        
     <body>
+        
         <p style="text-align:left;">
             <img src="assets/image/atholtonA.png" width="40" height="40">
             <a href="slide_6.php"><button type="button">Home</button></a>
