--- a/menu_bar.html
+++ b/menu_bar.html
@@ -7,10 +7,10 @@
         
         <p style="text-align:left;">
             <img src="assets/image/atholtonA.png" width="40" height="40">
-            <a href="slide_6.php"><button type="button">Home</button></a>
-            <a href="slide_9.php"><button type="button">FAQ</button></a>
-            <a href="slide_10.php"><button type="button">Announcements</button></a>
-            <a href="slide_11.php"><button type="button">Settings</button></a>
+            <a href="slide_6_home.php"><button type="button">Home</button></a>
+            <a href="slide_9_faq.php"><button type="button">FAQ</button></a>
+            <a href="slide_10_announcements.php"><button type="button">Announcements</button></a>
+            <a href="slide_11_settings.php"><button type="button">Settings</button></a>
             <a href="slide_8.php"><button type="button">About Us!</button></a>
     
             <span style="float:right;">
