--- a/menu_bar.html
+++ b/menu_bar.html
@@ -11,10 +11,10 @@
             <a href="slide_9_faq.php"><button type="button">FAQ</button></a>
             <a href="slide_10_announcements.php"><button type="button">Announcements</button></a>
             <a href="slide_11_settings.php"><button type="button">Settings</button></a>
-            <a href="slide_8.php"><button type="button">About Us!</button></a>
+            <a href="slide_8_about_us.php"><button type="button">About Us!</button></a>
     
             <span style="float:right;">
-                <a href="slide_2.php"><button type="button">Log in/Sign up</button></a>
+                <a href="slide_2_log_in.php"><button type="button">Log in/Sign up</button></a>
             </span>
         </p>
         
