--- a/link_test.html
+++ b/link_test.html
@@ -26,7 +26,7 @@ body {
         <p>Welcome Raiders
          </p>
       
-   <form class="login" method = "GET">
+   <form class="login" method = "POST">
   <input type="text" id="username" name="username" placeholder="username" required><br>
 
      <input type="password"id="password" name="lname" placeholder="password" required>
