--- a/menu_bar.html
+++ b/menu_bar.html
@@ -1,6 +1,13 @@
 <html>
     <head>
          <link href='menu_bar.css' rel='stylesheet'>
+        
+        <style>
+            body {
+                font-family: 'Graduate';font-size: 22px;
+                background-color: #eeeeee;
+            }
+        </style>
     </head>
         
     <body>
