--- a/link_test.html
+++ b/link_test.html
@@ -30,7 +30,7 @@ body {
   <input type="text" id="username" name="username" placeholder="username" required><br>
 
      <input type="password"id="password" name="lname" placeholder="password" required>
-     <input type="submit" id="login"value="Login"/>
+     <input type="submit" id="login" name="submit" value="Login"/>
      </form>
  
       <p id="forgotpass"><a href="slide_3.php">Forgot password?</a></p>
