--- a/menu_bar.html
+++ b/menu_bar.html
@@ -12,7 +12,7 @@
     <body>
         
         <p style="text-align:left;">
-            <img src="assets/image/atholtonA.png" width="40" height="40">
+            <img src="assets/image/NewAtholtonA.png" width="40" height="40">
             <a href="slide_6_home.php"><button class="menu_btn" type="button">Home</button></a>
             <a href="slide_9_faq.php"><button class="menu_btn" type="button">FAQ</button></a>
             <a href="slide_10_announcements.php"><button class="menu_btn" type="button">Announcements</button></a>
