--- a/menu_bar.html
+++ b/menu_bar.html
@@ -20,7 +20,7 @@
             <a href="slide_8_about_us.php"><button class="menu_btn" type="button">About Us!</button></a>
     
             <span style="float:right;">
-                <a href="slide_2_log_in.php"><button class="menu_btn" type="button">Log in/Sign up</button></a>
+                <a href="slide_1_welcome.php"><button class="menu_btn" type="button">Log in/Sign up</button></a>
             </span>
         </p>
         
