--- a/nav_bar.html
+++ b/nav_bar.html
@@ -1,6 +1,8 @@
-<html>
-
+<!doctype html>
+<html lang = "en">
  <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href='https://fonts.googleapis.com/css?family=Graduate' rel='stylesheet'>
 <style>
 body {
@@ -10,13 +12,17 @@ body {
 </head>
  
 <body>
-<div class = "topnav">
-  <a 1px solid redhref="#home">Home</a>
-  <a href="#faq">FAQ</a>
-  <a href="#announcements">Announcements</a>
-  <a href="#settings">Settings</a>
-  <a href="#help">Need Help?</a>
- </div>
+  <div class = "row">
+  <div class = "col 12 mx-auto">
+  <ul class="nav justify-content-center">
+      <a class="nav-link" href="#">Home</a>
+      <a class="nav-link" href="#">FAQ</a>
+      <a class="nav-link" href="#">Announcements</a>
+      <a class="nav-link" href="#">Settings</a>
+      <a class="nav-link" href="#">Need Help?</a>
+  </ul>
+  </div>
+</div>
 </body>
  
  </html>
