--- a/nav_bar.html
+++ b/nav_bar.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href='https://fonts.googleapis.com/css?family=Graduate' rel='stylesheet'>
+   <link rel = "stylesheet" href = "nav_bar.css">
+
 <style>
 body {
     font-family: 'Graduate';font-size: 22px;
