--- a/nav_bar.html
+++ b/nav_bar.html
@@ -14,16 +14,24 @@ body {
 </head>
  
 <body>
-  <div class = "row">
-  <div class = "col 12 mx-auto">
-  <ul class="nav justify-content-center">
-      <a class="nav-link" href="#">Home</a>
-      <a class="nav-link" href="#">FAQ</a>
-      <a class="nav-link" href="#">Announcements</a>
-      <a class="nav-link" href="#">Settings</a>
-      <a class="nav-link" href="#">Need Help?</a>
-  </ul>
-  </div>
+<div class = "col-12">
+  <nav class=" nav flex-column flex-sm-row">
+    <div class = "nav-item">
+      <a class="flex-sm-fill text-sm-center nav-link" href="#">Home</a>
+    </div>
+    <div class = "nav-item">
+      <a class="flex-sm-fill text-sm-center nav-link" href="#">FAQ</a>
+    </div>
+    <div class = "nav-item">
+      <a class="flex-sm-fill text-sm-center nav-link" href="#">Schedule</a>
+    </div>
+    <div class = "nav-item">
+      <a class="flex-sm-fill text-sm-center nav-link" href="#">History</a>
+    </div>
+    <div class = "nav-item">
+      <a class="flex-sm-fill text-sm-center nav-link" href="#">Need Help?</a>
+    </div>
+  </nav>
 </div>
 </body>
  
