--- a/nav_bar.html
+++ b/nav_bar.html
@@ -3,6 +3,7 @@
  <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link href='https://fonts.googleapis.com/css?family=Graduate' rel='stylesheet'>
    <link rel = "stylesheet" href = "nav_bar.css">
 
@@ -14,24 +15,20 @@ body {
 </head>
  
 <body>
-<div class = "col-12">
-  <nav class=" nav flex-column flex-sm-row">
-    <div class = "nav-item">
-      <a class="flex-sm-fill text-sm-center nav-link" href="#">Home</a>
-    </div>
-    <div class = "nav-item">
-      <a class="flex-sm-fill text-sm-center nav-link" href="#">FAQ</a>
-    </div>
-    <div class = "nav-item">
-      <a class="flex-sm-fill text-sm-center nav-link" href="#">Schedule</a>
-    </div>
-    <div class = "nav-item">
-      <a class="flex-sm-fill text-sm-center nav-link" href="#">History</a>
-    </div>
-    <div class = "nav-item">
-      <a class="flex-sm-fill text-sm-center nav-link" href="#">Need Help?</a>
+<div class = "container">
+<div class = "row">
+<div class = "col-12 mx-auto">
+  <nav class=" nav justify-content-center">
+    <div class="nav-item">
+          <a class = "nav-link" href ="#">Home</a>
+          <a class = "nav-link" href ="#">FAQs</a>
+          <a class = "nav-link" href ="#">Schedule</a>
+          <a class = "nav-link" href ="#">History</a>
+          <a class = "nav-link" href ="#">Need Help?</a>
     </div>
   </nav>
+ </div>
+ </div>
 </div>
 </body>
  
