--- a/header.html
+++ b/header.html
@@ -1,6 +1,9 @@
 <html>
   <head>
     <title>Raider Time Website</title>
+  <style>
+    background-image: url('https://github.com/atholtonawol/raidertime-22/blob/main/assets/image/atholton_building_updated_color.jpg?raw=true');
+   </style>
   </head>
   
   <body>
