--- a/nav_bar.html
+++ b/nav_bar.html
@@ -20,7 +20,7 @@ body {
 <div class = "col-12 mx-auto">
   <nav class=" nav justify-content-center">
     <div class="nav-item">
-          <a class = "nav-link" href ="#">Home</a>
+          <a class = "nav-link" href ="slide_6_home.php">Home</a>
           <a class = "nav-link" href ="#">FAQs</a>
           <a class = "nav-link" href ="#">Schedule</a>
           <a class = "nav-link" href ="#">History</a>
