--- a/nav_bar.html
+++ b/nav_bar.html
@@ -21,9 +21,9 @@ body {
   <nav class=" nav justify-content-center">
     <div class="nav-item">
           <a class = "nav-link" href ="slide_6_home.php">Home</a>
-          <a class = "nav-link" href ="slide_9_faqs.php">FAQs</a>
-          <a class = "nav-link" href ="#">Schedule</a>
-          <a class = "nav-link" href ="#">History</a>
+          <a class = "nav-link" href ="slide_9_faq.php">FAQs</a>
+          <a class = "nav-link" href ="slide_10_announcements.php">Schedule</a>
+          <a class = "nav-link" href ="slide_11_settings.php">History</a>
           <a class = "nav-link" href ="#">Need Help?</a>
     </div>
   </nav>
