--- a/nav_bar.html
+++ b/nav_bar.html
@@ -24,7 +24,7 @@ body {
           <a class = "nav-link" href ="slide_9_faq.php">FAQs</a>
           <a class = "nav-link" href ="slide_10_announcements.php">Schedule</a>
           <a class = "nav-link" href ="slide_11_settings.php">History</a>
-          <a class = "nav-link" href ="#">Need Help?</a>
+          <a class = "nav-link" href ="slide_8_about_us.php">Need Help?</a>
     </div>
   </nav>
  </div>
