--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,10 @@
 
 <html>
-    <footer>
+ <head>
+  <link rel="stylesheet" href="footer.css">
+  </head>
+  
+  <body>
    <div class="container-fluid">
     <div class="row">
      <div class="col-sm-3">
@@ -14,5 +18,7 @@
        </div>
       </div>
      </div>
-  </footer>
+  </body>
+    
+    
 </html>
