--- a/header.html
+++ b/header.html
@@ -2,7 +2,9 @@
   <head>
     <title>Raider Time Website</title>
   <style>
+  body{
     background-image: url('https://github.com/atholtonawol/raidertime-22/blob/main/assets/image/atholton_building_updated_color.jpg?raw=true');
+    }
    </style>
   </head>
   
