--- a/header.html
+++ b/header.html
@@ -1,11 +1,9 @@
 <html>
   <head>
     <title>Raider Time Website</title>
-  <style>
-  body{
-    background-image: url('https://github.com/atholtonawol/raidertime-22/blob/main/assets/image/atholton_building_updated_color.jpg?raw=true');
-    }
-   </style>
+
+   <link rel="stylesheet" href="header.css">
+
   </head>
   
   <body>
