--- a/header.html
+++ b/header.html
@@ -13,7 +13,7 @@
   <body>
   <div class = "header>
     <div class = "header-image">
-      <img src = ""/>
+      <img src = "atholton_building_updated_color_crop2.jpg"/>
     </div>
     <h1>Atholton High School</h1>
     <h2>Raider Time Signup</h2>
