--- a/footer.html
+++ b/footer.html
@@ -11,7 +11,7 @@
        <h5> © AWOL Team 2022,</h5>
        </div>
          <div class="col-sm-7">
-            <a href="https://en.wikipedia.org/wiki/Brown_bear" target="_blank">ABOUT US</a>
+            <a href="slide_8_about_us.php" target="_blank">ABOUT US</a>
            </div>
            <div class="col-sm-2">
              <a id="contact" href="https://www.wikipedia.org/" target="_blank">CONTACT US</a>
