--- a/footer.html
+++ b/footer.html
@@ -14,7 +14,7 @@
             <a href="slide_8_about_us.php" target="_blank">ABOUT US</a>
            </div>
            <div class="col-sm-2">
-             <a id="contact" href="https://www.wikipedia.org/" target="_blank">CONTACT US</a>
+             <a id="contact" href="https://mail.google.com/mail/u/0/#inbox" target="_blank">CONTACT US</a>
        </div>
       </div>
      </div>
