--- a/header.html
+++ b/header.html
@@ -30,25 +30,25 @@
       <?php
         //require('menu_bar.html');
       ?>
-      <div class="container-fluid">
+      <div class=" px-4 pt-3 container-fluid">
         <div class="row">
-          <div class="col-12">
+          <div class="header col-12">
+            <div class = "header-image">
+              <img src= “”>
+              <div class = "header-text">
+              <h1 class="display-2"><b>Atholton High School</b></h1>
+              <h3 class="display-5"><b>Raider Time Signup</b></h2>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-      <div class=" px-4 pt-3 container-fluid">
-      <div class="row">
-        <div class="col-10">
-          <div class="images">
-          <h1 class="display-2"><b>Atholton High School</b></h1>
-            <h3 class="display-5"><b>Raider Time Signup</b></h2>
-            </div>
-        </div>
+      
+    
         <div class="col-2 text-end">
         <img class = "img-fluid" src="https://github.com/atholtonawol/raidertime-22/blob/main/assets/image/new_Atholton_raider1-removebg-preview.png?raw=true">
         </div>
-      </div>
-      </div>
+ 
  <?php
      require('nav_bar.html');
    ?>
