--- a/header.html
+++ b/header.html
@@ -10,18 +10,9 @@
     <!-- CSS Code for background image -->
    
     <style>
-      html {
-        height: 100%;
-      }
+
   body {
     font-family: 'Graduate';font-size: 22px;
-    height: 100%;
-    margin: 0;
-    background-image: radial-gradient(rgba(220,220,220, 0.4), rgba(220, 220, 220,1)), url('https://github.com/atholtonawol/raidertime-22/blob/main/assets/image/atholtonbuildingcropped.jpg?raw=true');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-color: #dcdcdc;
-    background-attachment: fixed;
   }
 
 </style>
@@ -34,7 +25,7 @@
         <div class="row">
           <div class="header col-12">
             <div class = "header-image">
-              <img src= “”>
+              <img src= “atholton_building_new.jpg”>
               <div class = "header-text">
               <h1 class="display-2"><b>Atholton High School</b></h1>
               <h3 class="display-5"><b>Raider Time Signup</b></h2>
