--- a/header.html
+++ b/header.html
@@ -21,14 +21,14 @@
       <?php
         //require('menu_bar.html');
       ?>
-      <div class=" px-4 pt-3 container-fluid">
+      <div class="container-fluid">
         <div class="row">
           <div class="header col-12">
             <div class = "header-image">
               <img src= “atholton_building_new.jpg”>
               <div class = "header-text">
-              <h1 class="display-2"><b>Atholton High School</b></h1>
-              <h3 class="display-5"><b>Raider Time Signup</b></h2>
+                <h1 class="display-2"><b>Atholton High School</b></h1>
+                <h3 class="display-5"><b>Raider Time Signup</b></h2>
               </div>
             </div>
           </div>
