--- a/header.html
+++ b/header.html
@@ -15,6 +15,21 @@
     font-family: 'Graduate';font-size: 22px;
   }
 
+<style>
+      html {
+        height: 100%;
+      }
+  body {
+    font-family: 'Graduate';font-size: 22px;
+    height: 100%;
+    margin: 0;
+    background-image: radial-gradient(rgba(220,220,220, 0.4), rgba(220, 220, 220,1)), url('https://github.com/atholtonawol/raidertime-22/blob/main/assets/image/atholtonbuildingcropped.jpg?raw=true');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: #dcdcdc;
+    background-attachment: fixed;
+  }
+
 </style>
   </head> 
     <body>
@@ -23,23 +38,23 @@
       ?>
       <div class="container-fluid">
         <div class="row">
-          <div class="header col-12">
-            <div class = "header-image">
-              <img src= “atholton_building_new.jpg”>
-              <div class = "header-text">
-                <h1 class="display-2"><b>Atholton High School</b></h1>
-                <h3 class="display-5"><b>Raider Time Signup</b></h2>
-              </div>
-            </div>
+          <div class="col-12">
           </div>
         </div>
       </div>
-      
-    
+      <div class=" px-4 pt-3 container-fluid">
+      <div class="row">
+        <div class="col-10">
+          <div class="images">
+          <h1 class="display-2"><b>Atholton High School</b></h1>
+            <h3 class="display-5"><b>Raider Time Signup</b></h2>
+            </div>
+        </div>
         <div class="col-2 text-end">
         <img class = "img-fluid" src="https://github.com/atholtonawol/raidertime-22/blob/main/assets/image/new_Atholton_raider1-removebg-preview.png?raw=true">
         </div>
- 
+      </div>
+      </div>
  <?php
      require('nav_bar.html');
    ?>
