--- a/header.html
+++ b/header.html
@@ -4,59 +4,25 @@
     <title>Home Page</title>
     <!-- Link css stylesheets, and bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="slide_1.css">
+    <link rel="stylesheet" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=Graduate' rel='stylesheet'>
-
     <!-- CSS Code for background image -->
    
-    <style>
-
-  body {
-    font-family: 'Graduate';font-size: 22px;
-  }
-
-<style>
-      html {
-        height: 100%;
-      }
-  body {
-    font-family: 'Graduate';font-size: 22px;
-    height: 100%;
-    margin: 0;
-    background-image: radial-gradient(rgba(220,220,220, 0.4), rgba(220, 220, 220,1)), url('https://github.com/atholtonawol/raidertime-22/blob/main/assets/image/atholtonbuildingcropped.jpg?raw=true');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-color: #dcdcdc;
-    background-attachment: fixed;
-  }
-
-</style>
   </head> 
     <body>
-      <?php
-        //require('menu_bar.html');
-      ?>
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-12">
-          </div>
-        </div>
-      </div>
-      <div class=" px-4 pt-3 container-fluid">
-      <div class="row">
-        <div class="col-10">
-          <div class="images">
-          <h1 class="display-2"><b>Atholton High School</b></h1>
-            <h3 class="display-5"><b>Raider Time Signup</b></h2>
-            </div>
-        </div>
-        <div class="col-2 text-end">
-        <img class = "img-fluid" src="https://github.com/atholtonawol/raidertime-22/blob/main/assets/image/new_Atholton_raider1-removebg-preview.png?raw=true">
-        </div>
-      </div>
-      </div>
- <?php
-     require('nav_bar.html');
-   ?>
+
+
+      
+<meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Using HTML, CSS create display a text on top of an image using an overlay</title>
+</head>
+<body>
+<div >
+   <h1 class="text-overlay display-1"><b>Atholton High School</b></h1>
+            <h3 class="text-overlay2 display-5"><b>Raider Time Signup</b></h3>
+  <img src="https://github.com/atholtonawol/raidertime-22/blob/main/assets/image/atholtonbuildingcropped.jpg?raw=true" height="100%" width="100%"></div>
+
+      
   </body>
 </html>
