--- a/header.html
+++ b/header.html
@@ -1,1 +1,48 @@
 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Home Page</title>
+    <!-- Link css stylesheets, and bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="slide_1.css">
+    <link href='https://fonts.googleapis.com/css?family=Graduate' rel='stylesheet'>
+
+    <!-- CSS Code for background image -->
+   
+    <style>
+
+  body {
+    font-family: 'Graduate';font-size: 22px;
+  }
+
+</style>
+  </head> 
+    <body>
+      <?php
+        //require('menu_bar.html');
+      ?>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="header col-12">
+            <div class = "header-image">
+              <img src= “atholton_building_new.jpg”>
+              <div class = "header-text">
+                <h1 class="display-2"><b>Atholton High School</b></h1>
+                <h3 class="display-5"><b>Raider Time Signup</b></h2>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+    
+        <div class="col-2 text-end">
+        <img class = "img-fluid" src="https://github.com/atholtonawol/raidertime-22/blob/main/assets/image/new_Atholton_raider1-removebg-preview.png?raw=true">
+        </div>
+ 
+ <?php
+     require('nav_bar.html');
+   ?>
+  </body>
+</html>
