--- a/footer.html
+++ b/footer.html
@@ -8,7 +8,7 @@
    <div class="container-fluid">
     <div class="row">
      <div class="col-sm-3">
-       <h5> © AWOL Team 2022</h5>
+       <h5 style="color: white"> © AWOL Team 2022</h5>
        </div>
          <div class="col-sm-7">
             <a href="slide_8_about_us.php" target="_blank">ABOUT US</a>
