--- a/footer.html
+++ b/footer.html
@@ -5,7 +5,7 @@
   </head>
   
   <body>
-   <div class="container-fluid">
+   <div class="footer container-fluid">
     <div class="row">
      <div class="col-sm-3">
        <h5 style="color: white"> © AWOL Team 2022</h5>
