--- a/footer.html
+++ b/footer.html
@@ -5,7 +5,7 @@
   </head>
   
   <body>
-   <div class="footer container-fluid" style = "background-color: #16542e">
+   <div class="footer container-fluid" style = "background-color: #16542e; height: 2.5rem; position: fixed; bottom: 0">
     <div class="row">
      <div class="col-sm-3">
        <h5 style="color: white"> © AWOL Team 2022</h5>
