--- a/footer.html
+++ b/footer.html
@@ -11,7 +11,7 @@
        <h5 style="color: white"> © AWOL Team 2022</h5>
        </div>
          <div class="col-sm-7">
-            <a href="slide_8_about_us.php" target="_blank">ABOUT US</a>
+            <a id="about" href="slide_8_about_us.php" target="_blank">ABOUT US</a>
            </div>
            <div class="col-sm-2">
              <a id="contact" href="https://mail.google.com/mail/u/0/#inbox" target="_blank">CONTACT US</a>
