--- a/footer.html
+++ b/footer.html
@@ -11,10 +11,10 @@
        <h5 style="color: white"> © AWOL Team 2022</h5>
        </div>
          <div class="col-sm-7">
-            <a id="about" href="slide_8_about_us.php" target="_blank">ABOUT US</a>
+            <a style="color: #eeeeee" id="about" href="slide_8_about_us.php" target="_blank">ABOUT US</a>
            </div>
            <div class="col-sm-2">
-             <a id="contact" href="https://mail.google.com/mail/u/0/#inbox" target="_blank">CONTACT US</a>
+             <a style="color: #eeeeee" id="contact" href="https://mail.google.com/mail/u/0/#inbox" target="_blank">CONTACT US</a>
        </div>
       </div>
      </div>
